# KCRM

./: CMakeLists.txt  README.md  kcrm.cpp  kcrm.h  kcrm.ui  main.cpp  network_settings.json  resource.qrc  widget_logon.h
docs/: getting-started.md  index.md
scripts/: AI_CHAT_test.py
src/: kcrm.cpp  kcrm.h  kcrm.ui  kcrm.ui.autosave  logger_monitor.cpp  logger_monitor.h  main.cpp  textwidget.cpp  textwidget.h  widget_create_file.cpp  widget_create_file.h  widget_create_file.ui  widget_logon.cpp  widget_logon.h  widget_logon.ui  widget_minimization_widget.cpp  widget_minimization_widget.h  widget_minimization_widget.ui  widget_table_document.cpp  widget_table_document.h  widget_table_document.ui  widget_text_document.cpp  widget_text_document.h  widget_text_document.ui
src/data_base/: data_base.cpp  data_base.h  data_base_manager_kcrm.cpp  data_base_manager_kcrm.h
src/other_widgets/: widget_ai.hpp  widget_ai.ui  widget_users.hpp  widget_users.ui
src/ware_house/: README.md
src/ware_house/widgets/: widget_wh.hpp  widget_wh.ui
src/widget_telegram/: widget_telegram.cpp  widget_telegram.h  widget_telegram.ui
